--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.0.0",
     "nuxt": "^4.1.3",
+    "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
