--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "type-generate": "graphql-codegen"
   },
   "dependencies": {
     "@nuxt/content": "3.7.1",
@@ -16,6 +17,8 @@
     "@nuxt/ui": "4.1.0",
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.0.0",
+    "graphql": "^16.12.0",
+    "next-auth": "4.21.1",
     "nuxt": "^4.1.3",
     "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
@@ -24,6 +27,11 @@
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@graphql-codegen/cli": "^6.1.0",
+    "@graphql-codegen/client-preset": "^5.2.0",
+    "@graphql-codegen/typescript": "^5.0.5",
+    "@graphql-codegen/typescript-operations": "^5.0.5",
+    "@sidebase/nuxt-auth": "^1.1.0",
     "clsx": "^2.1.1"
   }
 }
