--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "type-generate": "graphql-codegen"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/content": "3.7.1",
@@ -20,6 +19,7 @@
     "graphql": "^16.12.0",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.3",
+    "nuxt-graphql-client": "0.2.46",
     "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
@@ -27,7 +27,6 @@
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@sidebase/nuxt-auth": "^1.1.0",
     "clsx": "^2.1.1"
   }
 }
