--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "openapi-ts": "openapi-ts"
   },
   "dependencies": {
     "@nuxt/content": "3.7.1",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "4.1.0",
+    "@pinia/nuxt": "0.11.3",
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.0.0",
     "graphql": "^16.12.0",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.3",
+    "pinia": "^3.0.4",
     "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
@@ -26,6 +29,7 @@
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@hey-api/openapi-ts": "0.88.0",
     "clsx": "^2.1.1"
   }
 }
