--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "openapi-ts": "openapi-ts"
+    "type": "npx openapi-typescript http://localhost:4001/api/api-docs-json --output ./app/types/api.ts"
   },
   "dependencies": {
     "@nuxt/content": "3.7.1",
@@ -21,6 +21,7 @@
     "graphql": "^16.12.0",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.3",
+    "openapi-typescript": "^7.10.1",
     "pinia": "^3.0.4",
     "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
