--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^4.1.3",
     "openapi-typescript": "^7.10.1",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "theme-colors": "^0.1.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
